# Registration

other/: CMakeLists.txt  alignment_prerejective.cpp  interactive_icp.cpp  iterative_closest_point.cpp  normal_distributions_transform.cpp
pclPractice/devel/: .catkin  .rosinstall  setup.sh
pclPractice/devel/lib/pkgconfig/: lidarOdom.pc  registration.pc
pclPractice/devel/share/lidarOdom/cmake/: lidarOdomConfig.cmake
pclPractice/devel/share/registration/cmake/: registrationConfig.cmake
pclPractice/src/lidarOdom/: CMakeLists.txt  package.xml
pclPractice/src/lidarOdom/launch/: run_lidarOdom.launch
pclPractice/src/lidarOdom/rviz/: rviz.rviz
pclPractice/src/lidarOdom/src/: lidarOdom.cpp  lidarOdom_2.cpp
pclPractice/src/registration/: CMakeLists.txt
pclPractice/src/registration/launch/: run_gicp.launch  run_icp.launch  run_ndt.launch  run_vicp.launch
pclPractice/src/registration/src/: registration.cpp
